update 14 March 2020 - add gas usage - selection of viewed data

--- a/app/src/main/res/layout/fragment_week_adapter.xml
+++ b/app/src/main/res/layout/fragment_week_adapter.xml
@@ -17,15 +17,26 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/barChartWeekTotaal"
+        android:id="@+id/barChartWeekWater"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Verbruik"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/barChartWeek" />
+
+    <TextView
+        android:id="@+id/barChartWeekGas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Verbruik"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/barChartWeekWater" />
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barChartWeek"
