--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,20 +9,24 @@
         android:id="@+id/navigation_day"
         android:label="@string/title_day"
         tools:layout="@layout/fragment_day"
-        android:name="be.huyck.mijnnutsverbruik.ui.day.DayFragment"/>
+        android:name="be.huyck.mijnnutsverbruik.ui.day.DayFragment">
+    </fragment>
     <fragment
         android:id="@+id/navigation_week"
         android:label="@string/title_week"
         tools:layout="@layout/fragment_week"
-        android:name="be.huyck.mijnnutsverbruik.ui.week.WeekFragment" />
+        android:name="be.huyck.mijnnutsverbruik.ui.week.WeekFragment" >
+    </fragment>
     <fragment
         android:id="@+id/navigation_month"
         android:name="be.huyck.mijnnutsverbruik.ui.month.MonthFragment"
         android:label="@string/title_month"
-        tools:layout="@layout/fragment_month"/>
+        tools:layout="@layout/fragment_month">
+    </fragment>
     <fragment
         android:id="@+id/navigation_year"
         android:name="be.huyck.mijnnutsverbruik.ui.year.YearFragment"
         android:label="@string/title_year"
-        tools:layout="@layout/fragment_year"/>
+        tools:layout="@layout/fragment_year">
+    </fragment>
 </navigation>
